sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	
	while( E == true) {
		var E:Boolean = false
		for(i <- 0 to getNombreValeurs - 2) {
			if(plusPetit(i + 1 , i)){
				echange(i, i + 1)
				E = true
			}
		}
	}
}
